  handle titles on case-sensitive wikis.
* (bug 29397) Implement mw.Title module in core.
* In MySQL 4.1.9+ with replication enabled, the slave lag should come from
  SHOW SLAVE STATUS instead of SHOW PROCESSLIST.
* Language codes in $wgDummyLanguageCodes are now excluded on localization
  statistics (maintenance/language/transstat.php)

=== Bug fixes in 1.19 ===
* (bug 28868) Show total pages in the subtitle of an image on the
  file description page for multi-paged documents.
* (bug 28883) Message names for different compression types commonly
  used in Tiff files.
* When translcuding a special page, do not let it interpret url parameters.
* (bug 28887) Special page classes are no longer re-used during 1 request.
* (bug 28888) Searching for something starting with a # sign no longer tells
  the user a page named [[:]] already exists.
* (bug 23002) Imagelinks table not updated after imagemove.
* (bug 27864) Transcluding {{Special:Prefix}} with empty prefix now lists all
  pages.
* (bug 18803) JPEG2000 images should not be uploadable as .jpg files.
* (bug 11868) If using links to count articles, the checking will now be based
  on the real presence of an internal link instead of the "[[" string
* (bug 28287) The "your changes" box for edit conflicts is now read-only.
* (bug 28940) When making a thumb of an SVG, and only specifying the height
  make the width be the max SVG size, not the natrual width of the SVG.
* (bug 1780) Uploading files with non-ascii characters are now forbidden on
  Windows.
* (bug 23464) File: prefixes are now chopped off during uploading.
* (bug 28174) Message config-logo-help amended to not explicitly assume any
  LTR/RTL screen layout.
* (bug 28992) Revision numbers in the patrol log are transformed in the user
  language.
* (bug 27073) ResourceLoaderDynamicStyles marker should be dynamically appended to
  the document head if it doesn't exist.
* (bug 27023) After the document is ready, mw.loader is broken (calls callback